#6772 fixed placement of country dropdown & z-index of category tabs

--- a/app/assets/stylesheets/category_selector.css.scss
+++ b/app/assets/stylesheets/category_selector.css.scss
@@ -18,7 +18,6 @@
   position: absolute;
   right: 32px;
   top: 120px;
-  z-index: 1;
 
   &.expanded {
     height: auto;
